<resources>
    <string name="app_name">Quotify</string>
    <string name="random_quote_path">quote.json</string>
    <string name="random_quote_with_category_path">quote/categories</string>
    <string name="quote_of_the_day_path">qod.json</string>
    <string name="quote_of_the_day_with_category_path">qod.json?category=</string>
    <string name="default_quote">People assume that time is a strict progression of cause to affect,
        but actually, from a non-linear, non subjective point of view it is more like a big ball of
    wibbily wobbly timey wimey… stuff</string>
    <string name="default_author">Doctor who (David Tennant)</string>
    <string name="random_or_qod_text">Type of Quote:</string>
    <string name="random_or_qod_desc">By default, you will get the quote of the day, but if you would like a random quote instead please check this box:</string>
    <string name="choice_prompt">Select a category</string>
    <string name="save_config_button_text">Save</string>
    <string name="select_category_text">Category:</string>
    <string name="weekday_desc_text">If you would like to select a specific category for your quotes, select one:</string>
    <string name="main_activity_info_description">This application will only display this default Quote to sample the widget.
        The real magic of Quotify is it\'s included widget that you can place on your home screen. You can find it under widgets!</string>
    <string name="interval_desc_text">Here you can set the timer for when you get a new quote. Default is every 24 hours, but you can select it to update X hours:</string>
    <string name="interval_text_text">Interval:</string>

    <string-array name="categories">
        <item>Art</item>
        <item>Funny</item>
        <item>Inspire</item>
        <item>Life</item>
        <item>Love</item>
        <item>Management</item>
        <item>Sports</item>
        <item>Students</item>
    </string-array>
    <string-array name="intervals">
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
    </string-array>
</resources>
